--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DB_HOST=localhost
-PASSWORD=1234
-DB=users_database
-DB_USER=pvill
+POSTGRES_HOST=
+POSTGRES_PASSWORD=
+POSTGRES_DB=
+POSTGRES_USER=
