--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node-dev --ignore-watch node_modules src/app.ts",
-    "test": "NODE_ENV=test jest",
-    "build": "yarn tsc",
+    "dev": "ts-node-dev --ignore-watch node_modules src/server.ts",
+    "test": "cross-env NODE_ENV=test jest",
+    "build": "tsc",
     "typeorm": "typeorm-ts-node-commonjs"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
-    "@types/jest": "^28.1.3",
+    "@types/jest": "^28.1.4",
     "@types/node": "^18.0.1",
     "@types/supertest": "^2.0.12",
-    "jest": "27.5.1",
+    "jest": "^28.1.2",
     "sqlite3": "^5.0.8",
-    "supertest": "^6.2.3",
+    "supertest": "^6.2.4",
     "ts-jest": "^28.0.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.7.4"
@@ -27,8 +27,11 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/uuid": "^8.3.4",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-errors": "^3.1.1",
     "pg": "^8.7.3",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.7",
